// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="false"
        class="emotion-3"
        name="checkbox"
        type="checkbox"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="true"
        checked=""
        class="emotion-3"
        name="checkbox"
        type="checkbox"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: not-allowed;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="true"
        aria-disabled="true"
        checked=""
        class="emotion-3"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: not-allowed;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        class="emotion-3"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="false"
        class="emotion-3"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="false"
        class="emotion-3"
        name="checkbox"
        type="checkbox"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with valid 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-3:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-4 {
  fill: #45d6b5;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  padding-top: 2px;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="emotion-0"
  >
    <label
      class="emotion-1 emotion-2"
    >
      <input
        aria-checked="false"
        class="emotion-3"
        name="checkbox"
        type="checkbox"
      />
      <svg
<<<<<<< HEAD
        class="emotion-4"
=======
        class="emotion-3 emotion-4"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-5"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;
